--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -149,7 +149,7 @@ const user = {
     .profile-pic {
         width: 120px;
         height: 120px;
-        border: 4px solid #22a7f0; /* Slightly smaller border */
+        border: 4px solid #22a7f0; 
     }
 
     .profile-info {
@@ -212,10 +212,4 @@ const user = {
     transform: scale(1.1);
     text-shadow: 0 0 5px rgba(255, 255, 255, 0.87);
 }
-
-
-
-
-
- 
 </style>
