profile ui thoda thoda updated

--- a/src/pages/profile.astro
+++ b/src/pages/profile.astro
@@ -59,9 +59,9 @@ const user = {
     <input type="radio" id="tab2" name="tab-control">
     <input type="radio" id="tab3" name="tab-control">
     <ul>
-      <li><label for="tab1" role="button"><span>2023-24</span></label></li>
-      <li><label for="tab2" role="button"><span>2024-25</span></label></li>
-      <li><label for="tab3" role="button"><span>Faculty</span></label></li>
+      <li><label for="tab1" role="button"><span>your blogs</span></label></li>
+      <li><label for="tab2" role="button"><span>events registered</span></label></li>
+      <li><label for="tab3" role="button"><span>certificates</span></label></li>
     </ul>
     <div class="content">
       
@@ -263,8 +263,8 @@ const user = {
 
 
 }
-
-.tabs {
+ /* Tabs Navigation */
+ .tabs {
   position: relative;
   display: flex;
   flex-direction: column;
