benifits.astro --- border radius added

--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -73,6 +73,9 @@ const cards = [
     -webkit-background-clip: text;
     white-space: nowrap;
   }
+  img{
+    border-radius: 2rem;
+  }
 </style>
 
 <script>
